--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "start": "babel-node server.js"
   },
   "dependencies": {
-    "axios": "^0.16.2",
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
-    "cookie-session": "^1.3.0",
+    "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
     "morgan": "^1.8.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
@@ -32,9 +33,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.5",
-    "style-loader": "^0.18.2",
+    "style-loader": "^0.20.3",
     "stylus-loader": "^3.0.1",
-    "webpack": "^3.5.5",
+    "webpack": "^4.1.1",
     "webpack-node-externals": "^1.6.0"
   }
 }
